# write-like-me

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: api.rs  main.rs  skill.rs
