[package]
name = "write-like-me"
version = "0.1.0"
edition = "2024"
description = "Capture your writing style and generate a Claude Code skill that writes like you"
license = "MIT"
keywords = ["claude", "writing", "style", "ai", "cli"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.28"
crossterm = "0.28"
